--- a/New Student Form.css
+++ b/New Student Form.css
@@ -21,6 +21,16 @@ body {
 
 .label {
     display: inline-block;
-    min-width: 150px;
+    --min-width: 170px;
     text-align: right;
+}
+
+#why {
+    width: 500px;
+}
+
+#submit {
+    margin-left: 45vh;
+    width: 200px;
+    height: 40px;
 }
