--- a/New Student Form.css
+++ b/New Student Form.css
@@ -3,7 +3,6 @@ body {
     background-color: rgb(0, 0, 91);
 }
 #pageDiv {
-    --display: grid;
     border-radius: 2px;
     border-style: solid;
     border-radius: 7px;
@@ -13,16 +12,28 @@ body {
     margin-top: 1vw;
     background-color: white;
     padding-left: 10px;
+    overflow-y: scroll;
 }
 
 .input {
     margin-right: 20px;
+    width: 150px;
+    margin-left: 0px;
 }
 
 .label {
     display: inline-block;
-    --min-width: 170px;
+    min-width: 170px;
     text-align: right;
+    margin-right: 5px;
+}
+
+.miniBox {
+    width: 20px;
+}
+
+.smallBox {
+    width: 60px;
 }
 
 #why {
@@ -40,10 +51,13 @@ body {
 }
 
 .addingElements {
-    position: relative;
+    margin-bottom: 5px;
 }
 
 .addButton {
-    position: absolute;
-    top: -3px;
+    vertical-align: middle;
+}
+
+.inline {
+    display: inline-block;
 }
