--- a/New Student Form.css
+++ b/New Student Form.css
@@ -17,15 +17,27 @@ body {
 
 .input {
     margin-right: 20px;
-    width: 150px;
     margin-left: 0px;
+    margin-bottom: 5px;
+    width: 150px;
+    padding: 0px;
+}
+
+.input2 {
+    margin-right: 25px;
 }
 
 .label {
     display: inline-block;
-    min-width: 170px;
+    min-width: 140px;
     text-align: right;
     margin-right: 5px;
+    margin-left: 0px;
+    margin-bottom: 5px;
+}
+
+.label2 {
+    margin-right: 9px;
 }
 
 .miniBox {
