fixed input field validation

--- a/Forms/New Student Form/New Student Form.css
+++ b/Forms/New Student Form/New Student Form.css
@@ -71,6 +71,10 @@ body {
     vertical-align: middle;
 }
 
+.removeButton {
+    vertical-align: middle;
+}
+
 .inline {
     display: inline-block;
 }
