--- a/Forms/New Parent Form/New Parent Form.css
+++ b/Forms/New Parent Form/New Parent Form.css
@@ -1,6 +1,8 @@
 body {
     font-family: sans-serif;
-    background-color: rgb(0, 0, 91);
+    background-image: url("../../Images/MIT\ Campus.jpg");
+    --background-color: rgb(0, 0, 91);
+    background-size: cover;
 }
 #pageDiv {
     border-radius: 2px;
@@ -11,7 +13,8 @@ body {
     margin-left: 1vw;
     margin-top: 1vw;
     background-color: white;
-    padding-left: 10px;
+    opacity: 90%;
+    padding-left: 20px;
     overflow-y: scroll;
 }
 
@@ -19,8 +22,11 @@ body {
     margin-right: 20px;
     margin-left: 0px;
     margin-bottom: 5px;
-    width: 150px;
-    padding: 0px;
+    width: 20vw;
+    height: 1.5em;
+    padding-left: 0.5em;
+    border-radius: 2px;
+    border-width: 1px;
 }
 
 .input2 {
@@ -30,10 +36,10 @@ body {
 .label {
     display: inline-block;
     min-width: 140px;
-    text-align: right;
     margin-right: 5px;
     margin-left: 0px;
     margin-bottom: 5px;
+    font-weight: bold;
 }
 
 .label2 {
@@ -46,6 +52,17 @@ body {
 
 .smallBox {
     width: 60px;
+}
+
+.flexRow {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+}
+
+.flexColumn {
+    display: flex;
+    flex-direction: column;
 }
 
 #why {
