--- a/Forms/New Parent Form/New Student.css
+++ b/Forms/New Parent Form/New Student.css
@@ -1,56 +1,49 @@
 body {
     font-family: serif;
-    background-image: url("../../Images/MIT\ Campus.jpg");
-    --background-color: rgb(0, 0, 91);
+    background-image: url("../../Images/Wasatch\ Mountain.jpg");
     background-size: cover;
+    font-family: Roboto, sans-serif;
+}
+
+#section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 #pageDiv {
-    position: relative;
-}
-
-#title {
-    position: absolute;
-    background-color: rgb(64, 64, 132);
-    height: 5em;
-    width: 95vw;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 40vw;
+    height: 90vh;
     border-radius: 10px;
-    z-index: 3;
-    padding-left: 1em;
-    color: white;
+    box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.1);
 }
 
 #form {
-    border-radius: 8px;
-    border-style: solid;
-    height: 86vh;
-    width: 95vw;
     margin-right: 1vw;
     margin-left: 1vw;
-    background-color: white;
     opacity: 90%;
-    padding-left: 20px;
-    padding-top: 5vw;
-    position: absolute;
-    overflow-y: scroll;
-    z-index: 1;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+    width: 95%;
 }
 
-#banner {
-    background-color: antiquewhite;
+.formTitle {
+    background-color: #110D65;
+    font-size: 32px;
     color: white;
-    height: 92vh;
-    width: 15vw;
-    border-style: solid;
-    border-radius: 1px;
-    --margin-left: 83.55vw;
-    right: 0%;
-    margin-top: -1vh;
-    padding-top: 8vh;
-    position: absolute;
-    z-index: 2;
+    text-align: center;
+    width: 100%;
+    margin-top: 0px;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .fullLength {
@@ -101,38 +94,35 @@ body {
 .input {
     margin-right: 20px;
     margin-left: 0px;
-    margin-bottom: 5px;
-    width: 20vw;
+    --width: 20vw;
+    width: 18em;
     height: 1.5em;
+    font-size: 16px;
+    font-weight: 200;
     padding-left: 0.5em;
-    border-radius: 2px;
-    border-width: 1px;
+    padding-right: 0.5em;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(200, 200, 200, .25);
+    box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.1);
+    font-size: 16px;
 }
 
 .label {
-    display: inline-block;
+    letter-spacing: 0.15em;
     min-width: 20vw;
     margin-right: 5px;
     margin-left: 0px;
     margin-bottom: 5px;
-    font-weight: bold;
-    font-size: larger;
-}
-
-.formTitle {
-    background-color: rgb(98,64, 132);
-    color: white;
-    padding: 0.5em;
-    width: 78.5vw;
-    border-radius: 10px;
-    text-align: center;
-    margin-bottom: 3vh;
+    font-weight: 200;
+    font-size: 14px;
 }
 
 .flexRow {
     display: flex;
     flex-direction: row;
     margin-bottom: 20px;
+    align-items: center;
 }
 
 .flexColumn {
@@ -143,8 +133,9 @@ body {
 #agreementDiv {
     border-style: solid;
     border-width: 2px;
-    width: 78.5vw;
-    height: 35vh;
+    width: 95%;
+    height: 50%;
+    padding-right: 1%;
 }
 
 text {
@@ -156,7 +147,6 @@ text {
 p {
     margin-bottom: 0px;
     word-wrap: normal;
-    width: 70vw;
 }
 
 #statement {
@@ -167,10 +157,12 @@ p {
 
 .signature {
     margin-left: 4em;
+    margin-top: -0.5em;
 }
 
 .date {
     margin-left: 10em;
+    margin-top: -0.5em;
 }
 
 .finalInput {
