--- a/Site Templates/New Student.css
+++ b/Site Templates/New Student.css
@@ -10,6 +10,7 @@ body {
     font-weight: 200;
     padding-left: 0.5em;
     padding-right: 0.5em;
+    margin-bottom: 1em;
     border: none;
     border-radius: 10px;
     background-color: rgb(200, 200, 200, .25);
