--- a/Forms/New Parent Form/New Student.css
+++ b/Forms/New Parent Form/New Student.css
@@ -1,6 +1,6 @@
 body {
     font-family: serif;
-    background-image: url("../../Images/Wasatch\ Mountain.jpg");
+    background-image: url("../../Images/Wasatch Mountain.jpg");
     background-size: cover;
     font-family: Roboto, sans-serif;
 }
@@ -94,8 +94,7 @@ body {
 .input {
     margin-right: 20px;
     margin-left: 0px;
-    --width: 20vw;
-    width: 18em;
+    width: 40%;
     height: 1.5em;
     font-size: 16px;
     font-weight: 200;
@@ -134,7 +133,6 @@ body {
     border-style: solid;
     border-width: 2px;
     width: 95%;
-    height: 50%;
     padding-right: 1%;
 }
 
@@ -156,12 +154,11 @@ p {
 }
 
 .signature {
-    margin-left: 4em;
+    margin-left: 1em;
     margin-top: -0.5em;
 }
 
 .date {
-    margin-left: 10em;
     margin-top: -0.5em;
 }
 
