--- a/Forms/New Parent Form/New Student.css
+++ b/Forms/New Parent Form/New Student.css
@@ -10,29 +10,49 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100vw;
 }
 
-#pageDiv {
+#registration-block {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background-color: white;
-    width: 40vw;
-    height: 90vh;
+    height: 80vh;
     border-radius: 10px;
     box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.1);
+    max-width: 50%;
 }
 
-#form {
-    margin-right: 1vw;
+.heading-block {
+    background-color: #110D65;
+    font-size: 24px;
+    color: white;
+    text-align: center;
+    padding: 1%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    align-self: stretch;
+}
+
+#form-scroll-block {
+    /* margin-right: 1vw;
     margin-left: 1vw;
-    opacity: 90%;
+    opacity: 90%; */
     display: flex;
     flex-direction: column;
+    align-items: center;
     overflow-y: auto;
-    width: 95%;
+    padding: 25px;
 }
 
-.formTitle {
+.input-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+/* .formTitle {
     background-color: #110D65;
     font-size: 32px;
     color: white;
@@ -43,9 +63,9 @@ body {
     padding-bottom: 3%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-}
+} */
 
-.fullLength {
+/* .fullLength {
     height: 3em;
     width: 15vw;
     background-color: rgb(64, 131, 131);
@@ -88,33 +108,42 @@ body {
 
 .finalLength {
     margin-bottom: 1vh;
-}
+} */
 
-.input {
-    width: 15vw;
-    height: 1.5em;
+/* .input-row {
+    display: flex;
+    flex-direction: row;
+} */
+
+.input-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px;
+  }
+  
+  .input {
+    margin-bottom: 5px;
+    width: 250px;
+    height: 30px;
     font-size: 16px;
     font-weight: 200;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    margin-bottom: 1em;
+    padding-left: 10px;
+    padding-right: 10px;
     border: none;
-    border-radius: 10px;
     background-color: rgb(200, 200, 200, .25);
-    box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.1);
-}
-
-.label {
-    letter-spacing: 0.15em;
-    min-width: 20vw;
-    margin-right: 5px;
-    margin-left: 0px;
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  }
+  
+  .label {
+    align-self: flex-start;
+    text-align: left;
     margin-bottom: 5px;
-    font-weight: 200;
-    font-size: 14px;
-}
+    color: black;
+  }
 
-.flexRow {
+/* .flexRow {
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
@@ -124,46 +153,49 @@ body {
 .flexColumn {
     display: flex;
     flex-direction: column;
-}
+    align-items: center;
+} */
 
 #agreementDiv {
     border-style: solid;
     border-width: 2px;
-    width: 95%;
-    padding-right: 1%;
+    /* width: 95%; */
+    /* padding-right: 1%; */
 }
 
-text {
+/* text {
     font-size: smaller;
     margin-left: -1em;
     margin-top: 0.5em;
-}
+} */
 
 p {
     margin-bottom: 0px;
     word-wrap: normal;
+    /* max-width: 500px; */
 }
-ul {
+/* ul {
     margin-bottom: 0px;
     word-wrap: normal;
     width: 80%;
-}
+} */
 
 
 #statement {
     margin-left: 2em;
     margin-top: 4px;
     margin-bottom: 10px;
+    /* max-width: 50vw; */
 }
 
 .signature {
     margin-left: 1em;
-    margin-top: -0.5em;
+    /* margin-top: -0.5em; */
 }
 
 .date {
     margin-left: 1em;
-    margin-top: -0.5em;
+    /* margin-top: -0.5em; */
 }
 
 .finalInput {
