--- a/Forms/New Parent Form/New Student.css
+++ b/Forms/New Parent Form/New Student.css
@@ -23,8 +23,7 @@ body {
     z-index: 0;
 }
 
-#form {
-    margin-right: 1vw;
+#formDiv {
     margin-left: 1vw;
     display: flex;
     flex-direction: column;
@@ -87,6 +86,15 @@ body {
     flex-direction: row;
     margin-bottom: 10px;
     align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+    .flexRow {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .flexColumn {
