--- a/Sign In/Sign In.css
+++ b/Sign In/Sign In.css
@@ -3,8 +3,10 @@ body {
   font-size: 14px;
   font-weight: 200;
   letter-spacing: 2.5px;
+  background-color: black;
   background-image: url(../Images/Wasatch\ Mountain.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 ::placeholder {
@@ -13,7 +15,7 @@ body {
 
 #sign-in-section {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,19 +32,22 @@ body {
   align-items: center;
   padding: 5%;
   border-radius: 5%;
+  width: 35%;
+  max-width: 500px;
 }
 
 .input-block {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
   margin: 10px;
+  ;
 }
 
 .input {
-  margin-bottom: 5px;
-  width: 250px;
-  height: 30px;
+  width: 90%;
+  max-width: 400px;
+  height: 2em;
   font-size: 16px;
   font-weight: 200;
   padding-left: 10px;
@@ -61,7 +66,10 @@ body {
 }
 
 img {
+  object-fit: contain;
   margin: 20px;
+  max-width: 100%;
+  height: auto;
 }
 
 .button {
