--- a/Forms/New Parent Form/New Student.css
+++ b/Forms/New Parent Form/New Student.css
@@ -23,6 +23,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     background-color: white;
     height: 80vh;
     min-height: 400px;
@@ -42,12 +43,74 @@ body {
     align-self: stretch;
 }
 
+.progress-wrapper {
+    width: 60%
+}
+
+.progress-bar {
+    padding: 0px;
+    counter-reset: step;
+}
+
+.progress-bar li {
+    list-style-type: none;
+    float: left;
+    width: 33.33%;
+    position: relative;
+    text-align: center;
+}
+
+.progress-bar li::after {
+    content: counter(step);
+    counter-increment: step;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border: 2px solid #110D65;
+    border-radius: 50%;
+    display: block;
+    text-align: center;
+    margin: 10px auto 0 auto;
+    background-color: white;
+    position: relative;
+    z-index: 1;
+}
+
+.progress-bar li::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #110D65;
+    top: 43px;
+    left: -50%;
+    z-index: 0;
+}
+
+.progress-bar li:first-child:before {
+    content: none;
+}
+
+.progress-bar li.active {
+    color: green
+}
+
+.progress-bar li.active::after {
+    border-color: green;
+    content: '✓';
+}
+
+.progress-bar li.active + li::before {
+    background-color: green;
+}
+
 #form-scroll-block {
     display: flex;
     flex-direction: column;
     align-items: center;
     overflow-y: auto;
     padding: 25px;
+    margin-top: 10px;
 }
 
 .input-row {
