--- a/public/Forms/New Parent Form/New Student.css
+++ b/public/Forms/New Parent Form/New Student.css
@@ -169,7 +169,7 @@ body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     margin: 10px;
     /* align-self: stretch; */
     ;
@@ -178,6 +178,7 @@ body {
   .input {
     width: 90%;
     min-width: 200px;
+    max-width: 300px;
     height: 2em;
     font-size: 16px;
     font-weight: 200;
@@ -190,7 +191,6 @@ body {
   }
   
   .label {
-    align-self: flex-start;
     text-align: left;
     margin-bottom: 5px;
     margin-top: 5px;
