--- a/public/Forms/New Parent Form/New Student.css
+++ b/public/Forms/New Parent Form/New Student.css
@@ -20,11 +20,11 @@ body {
 }
 
 #parentForm {
-    --display: none;
+    display: none;
 }
 
 #studentForm {
-    display: none;
+    display: flex;
 }
 
 .registration-block {
@@ -37,7 +37,6 @@ body {
     min-height: 400px;
     border-radius: 10px;
     box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.1);
-    width: 50%;
     max-width: 650px;
 }
 
@@ -113,16 +112,24 @@ body {
     background-color: green;
 }
 
-.buttons {
-    padding-top: 1.15em;
-    padding-bottom: 1.15em;
-    width:  8em;
-    background-color: green;
-    border-top-left-radius: 25%50%;
-    border-bottom-left-radius: 25%50%;
-    border-top-right-radius: 25%50%;
-    border-bottom-right-radius: 25%50%;
-    text-align: center;
+button {
+  margin-bottom: 10px;
+  width: 140px;
+  height: 45px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  background-color: green;
+  text-align: center;
+  color: white;
 }
 
 #form-scroll-block {
@@ -132,14 +139,12 @@ body {
     overflow-x: hidden;
     overflow-y: auto;
     padding: 25px;
-    margin-top: 10px;
 }
 
 .input-row {
     display: flex;
     flex-direction: row;
     justify-content: left;
-    align-items: stretch;
     padding-left: 8%;
     padding-right: 8%;
 }
@@ -155,14 +160,48 @@ body {
     }
 }
 
+.input-row-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    width: max-content;
+}
+
+@media screen and (max-width: 1000px) {
+    .input-row-buttons {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+        padding-left: 8%;
+        padding-right: 8%;
+    }
+}
+
+.button {
+    margin-left: 3px;
+    cursor: pointer;
+}
+
+.firstButton {
+    margin-left: 10px;
+}
+
 .buttonsDiv {
     width: 100%;
     justify-content: space-between;
     padding-top: 3%;
 }
 
-#backButton {
-    background-color: red;
+.backButton {
+    background-color: rgb(255, 0, 0);
+    margin-left: 30px;
+    opacity: 1;
+}
+
+.nextButton {
+    margin-right: 30px;
+    opacity: 0;
 }
 
 .input-block {
@@ -170,13 +209,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   
   .input {
     width: 90%;
-    max-width: 300px;
-    min-width: 200px;
     max-width: 300px;
     height: 2em;
     font-size: 16px;
@@ -187,8 +226,15 @@ body {
     background-color: rgb(200, 200, 200, .25);
     border-radius: 10px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    margin-bottom: 2%;
   }
-  
+
+  .checkbox {
+      box-shadow: none;
+      height: auto;
+      width: auto;
+  }
+
   .label {
     text-align: left;
     margin-bottom: 5px;
