--- a/public/Forms/New Parent Form/New Student.css
+++ b/public/Forms/New Parent Form/New Student.css
@@ -31,14 +31,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: top;
-    align-items: center;
+    align-items: stretch;
     background-color: white;
     height: 90vh;
     min-height: 400px;
     border-radius: 10px;
     box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.1);
     width: 50%;
-    max-width: 650px;
 }
 
 .heading-block {
@@ -128,7 +127,7 @@ body {
 #form-scroll-block {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 25px;
@@ -156,7 +155,7 @@ body {
 }
 
 .buttonsDiv {
-    width: 100%;
+    /* width: 100%; */
     justify-content: space-between;
     padding-top: 3%;
 }
@@ -176,7 +175,7 @@ body {
   .input {
     width: 90%;
     max-width: 300px;
-    min-width: 200px;
+    /* min-width: 200px; */
     max-width: 300px;
     height: 2em;
     font-size: 16px;
