--- a/public/Forms/New Student Form/New Student.css
+++ b/public/Forms/New Student Form/New Student.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../Images/Wasatch Mountain.jpg");
+    background-image: url("../../Images/Glacier7.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: black;
