--- a/public/Sign-In/Sign-In.css
+++ b/public/Sign-In/Sign-In.css
@@ -5,7 +5,7 @@ body {
   font-weight: 200;
   letter-spacing: 2.5px;
   background-color: black;
-  background-image: url(../Images/Wasatch\ Mountain.jpg);
+  background-image: url(../Images/Glacier5.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
