--- a/public/inquiry.css
+++ b/public/inquiry.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("Images/Wasatch\ Mountain.jpg");
+  background-image: url("Images/Glacier5.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: black;
