--- a/public/Forms/New Student/New Student.css
+++ b/public/Forms/New Student/New Student.css
@@ -241,11 +241,11 @@ button {
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     margin-bottom: 2%;
 
+}
 
 select {
     background: url("../../Images/select-dropdown.png") no-repeat 95%;
     -webkit-appearance: none;
-    /* height: 3em; */
 }
 
 .label {
