--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -32,7 +32,7 @@ form {
   }
 
 #section {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -257,13 +257,13 @@ textarea {
     margin-top: 10px;
     margin-left: 10px;
     margin-right: 10px;
-  }
+}
 
-  #actDiv {
-      margin: 0;
-  }
-  
-  .input {
+#actDiv {
+    margin: 0;
+}
+
+.input {
     width: 90%;
     max-width: 300px;
     height: 2em;
@@ -276,24 +276,29 @@ textarea {
     border-radius: 10px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     margin-bottom: 2%;
-  }
+}
 
-  .checkbox {
-      box-shadow: none;
-      height: auto;
-      width: auto;
-      margin-left: 5px;
-      margin-right: 0px;
-      margin-top: 0px;
-      margin-bottom: 0px;
-  }
+.checkbox {
+    box-shadow: none;
+    height: auto;
+    width: auto;
+    margin-left: 5px;
+    margin-right: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 
-  .label {
+select {
+    background: url("../../Images/select-dropdown.png") no-repeat 95%;
+    -webkit-appearance: none;
+}
+
+.label {
     text-align: left;
     margin-bottom: 5px;
     margin-top: 5px;
     color: black;
-  }
+}
 
 
 #agreementDiv {
