--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -514,6 +514,21 @@ textarea {
     margin-bottom: 2%;
 }
 
+select {
+    width: 45%;
+    max-width: 150px;
+    height: 2em;
+    font-size: 16px;
+    font-weight: 200;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: none;
+    background-color: rgb(200, 200, 200, .25);
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    margin-left: 2%;
+}
+
 .checkbox {
     box-shadow: none;
     height: auto;
@@ -712,7 +727,11 @@ p.errorMessage {
 }
 #popupInfo {
     padding: 0px;
-    height: 85%;
+    height: 80%;
+}
+
+#timingBlock {
+    height: 5%;
 }
 
 #popupButtons {
