--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -8,12 +8,28 @@ body {
 
 .green {
     background-color: green;
+}
+
+.greenShade {
+    background-color: rgb(0, 191, 0);
+}
+
+.homeworkBox {
+    color: rgb(250, 250, 250);
+    font-size: 2.5em;
+}
+
+.practiceBox {
     color: rgb(250, 250, 250);
     font-size: 2.5em;
 }
 
 .yellow {
-    background-color: rgb(218, 165, 32);
+    background-color: rgb(252, 241, 81);
+}
+
+.orange {
+    background-color: orange;
 }
 
 .gray {
@@ -22,8 +38,6 @@ body {
 
 .red {
     background-color: red;
-    color: rgb(250, 250, 250);
-    font-size: 2.5em;
 }
 
 h2 {
