--- a/public/Sign-In/Sign-In.css
+++ b/public/Sign-In/Sign-In.css
@@ -8,6 +8,8 @@ body {
   background-image: url(../Images/Glacier5.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
+  margin: 0;
 }
 
 ::placeholder {
@@ -33,8 +35,8 @@ body {
   align-items: center;
   padding: 5%;
   border-radius: 5%;
-  width: 35%;
-  max-width: 500px;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 .input-block {
