--- a/public/student-info-test.css
+++ b/public/student-info-test.css
@@ -1,6 +1,51 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 200;
+  margin: 0;
+}
+
 .flex-row {
   display: flex;
   flex-direction: row;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: row;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.button {
+  margin-top: 20px;
+  margin-right: 50px;
+  width: 140px;
+  height: 45px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+  color: #110D65;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.button:hover {
+  background-color: #110D65;
+  box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
 }
 
 .score-box {
@@ -10,27 +55,36 @@
   align-items: center;
   padding: 20px;
   color: white;
-  font-size: 24px;
+  font-size: 36px;
+  font-weight: 500;
+  width: 50px;
+  height: 50px;
+}
+
+#student-name {
+  padding-right: 10px;
+  padding-left: 10px;
+  color: black;
 }
 
 .composite {
-  background-color: black;
+  background-color: #595959;
 }
 
 .english {
-  background-color: red;
+  background-color: #4848FF;
 }
 
 .math {
-  background-color: blue;
+  background-color: #FF48A3;
 }
 
 .reading {
-  background-color: green;
+  background-color: #FFFF48;
 }
 
 .science {
-  background-color: yellow;
+  background-color: #48FFA3;
   
 }
 
