--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -52,10 +52,6 @@ body {
     background-color: red;
 }
 
-h2 {
-    margin-bottom: 5px;
-}
-
 .line {
     height: 1px;
     width: 80%;
@@ -72,7 +68,7 @@ form {
     height: 100%;
     background-color: rgb(255, 255, 255);
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     overflow-y: auto;
 }
 
@@ -312,6 +308,10 @@ form {
 }
 
 .heading-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 8%;
     background-color: #110D65;
     font-size: 24px;
@@ -319,7 +319,6 @@ form {
     text-align: center;
     padding: 1%;
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     align-self: stretch;
 }
 
