--- a/public/Dashboard/Tutor.css
+++ b/public/Dashboard/Tutor.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 200;
+  margin: 0;
+}
+
 .input-row {
   display: flex;
   flex-direction: row;
