--- a/public/student-info-test.css
+++ b/public/student-info-test.css
@@ -53,12 +53,53 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
   padding: 20px;
   color: white;
   font-size: 36px;
   font-weight: 500;
   width: 50px;
   height: 50px;
+}
+
+.score-box .tooltip {
+  visibility: hidden;
+  width: 200px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  margin-left: -100px;
+  margin-top: 15px;
+  padding: 5px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.score-box .tooltip::before {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent #555 transparent;
+}
+
+.score-box:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip p {
+  font-size: 16px;
+  margin-right: 5px;
 }
 
 #student-name {
