--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -693,6 +693,7 @@ p.errorMessage {
     display: none;
     width: 350px;
     background-color: rgb(200, 200, 200);
+    border-radius: 10px;
     margin: 0px;
 }
 
