--- a/public/Dashboard/Admin.css
+++ b/public/Dashboard/Admin.css
@@ -22,10 +22,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 100vw;
   background-color: rgb(0, 0, 0, 0.5);
+  z-index: 100;
 }
 
 .heading-block {
