--- a/public/Dashboard/Tutor.css
+++ b/public/Dashboard/Tutor.css
@@ -64,8 +64,8 @@ select {
 
 .header {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  flex-direction: row;
+  justify-content: space-between;
   color: #110D65;
 }
 
@@ -93,4 +93,9 @@ select {
     box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
     color: #fff;
     transform: translateY(-7px);
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
   }
